<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AudioUploadActivity" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:id="@+id/pu_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/done"
            android:textColor="@color/pinkish"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/globe"
            android:text="@string/photoupload"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/closex"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/hr_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header_layout"
        android:background="@color/gray" >
    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/hr_line" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/photo_state"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/pu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/title" />

            <RelativeLayout
                android:id="@+id/editlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="2dp" >

                <EditText
                    android:id="@+id/pu_ca"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/pu_ca"
                    android:digits="0123456789"
                    android:hint="@string/calbum"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/pu_ca_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/pu_ca"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/pu_ca"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/calbum" />
            </RelativeLayout>

            <EditText
                android:id="@+id/pu_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/categories" />

            <EditText
                android:id="@+id/pu_desc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:hint="@string/description" />

            <LinearLayout
                android:id="@+id/p_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/photo_grid_bg"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tag_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tp"
                    android:textColor="@color/pinkish"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>