<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/upload_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#bf000000"
    android:gravity="center"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_pink_line"
        android:padding="5dp" >

        <TextView
            android:id="@+id/lock_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/privatetxt"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lock_txt"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/chat_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:drawableTop="@drawable/chat"
                android:gravity="center"
                android:text="@string/chat"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/myhub_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:drawableTop="@drawable/myhub"
                android:gravity="center"
                android:text="@string/myhub"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/mid_layout"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/top_layout" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/mid_layout"
        android:layout_marginTop="10dp"
        android:gravity="bottom" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/upload_blue_line"
            android:padding="5dp" >

            <TextView
                android:id="@+id/afp_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:drawableLeft="@drawable/globe"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/afb"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" >
            </TextView>

            <LinearLayout
                android:id="@+id/first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/afp_txt"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/v_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/video"
                    android:gravity="center"
                    android:text="@string/video"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/p_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/photo"
                    android:gravity="center"
                    android:text="@string/photo"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_row"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/a_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/audio_upload"
                    android:gravity="center"
                    android:text="@string/audio"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/m_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:drawableTop="@drawable/microblog"
                    android:gravity="center"
                    android:text="@string/microblog"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>