<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F8F8F8"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
         >

        <EditText
            android:id="@+id/searchtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/search_btn"
            android:background="@drawable/cmts_bg"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ., "
            android:hint="@string/pyc"
            android:imeActionLabel="Search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="5dp"
            android:maxLength="16"
            android:singleLine="true" >
        </EditText>

        <LinearLayout
            android:id="@+id/hidekeyboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >
        </LinearLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:text="@string/send"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>