<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/lastinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone" >

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/part1"
            android:gravity="right|bottom"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/pinkish"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/txt_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/wltpypwnpawyp"
            android:textColor="@color/pinkish"
            android:textSize="16sp" >
        </TextView>

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_msg"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/facebook" >
        </ImageView>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/introscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lastinfo" />

</RelativeLayout>